# monorepo

./: .gitignore  Cargo.toml  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yml  do-i-vote.yml  pull-request.yml  test-bazel.yml  test-cargo.yml  test-docker.yml
binaries/plex-pruner/: BUILD  main.rs
binaries/spot_dynamic/backend/: BUILD  Cargo.toml  Dockerfile
config/kubernetes/: BUILD  nodes.toml
graph/: TheGraph.md
kube-prometheus/: build.sh  jsonnetfile.lock.json  prometheus.jsonnet
kube-prometheus/manifests/: alertmanager-networkPolicy.yaml  grafana-config.yaml  grafana-dashboardDefinitions.yaml  grafana-deployment.yaml  grafana-networkPolicy.yaml  prometheus-networkPolicy.yaml  prometheus-roleBindingSpecificNamespaces.yaml  prometheus-roleSpecificNamespaces.yaml
kube-prometheus/src/: networkPolicy.jsonnet  resource-increases.jsonnet
kube-prometheus/src/alertmanager/: config.jsonnet
services/github-arc/: README.md  install-arc.sh
services/longhorn/: INSTALL.md  values.yaml
services/prometheus/: BUILD  deploy.rs
src/do-i-vote-fe/: package-lock.json  package.json
src/k8s-upgrader/: BUILD  Cargo.toml  main.rs
terraform/: .terraform.lock.hcl  cert-manager.tf  cloudflare-access.tf  cloudflare-khumps-dev.tf  cloudflare-tunnel.tf  exporters.tf  grafana-oncall.tf  ingress-nginx.tf  ingress.tf  knowhere.tf  longhorn-monitoring.tf  metallb.tf  planetside-tk.tf  plex.tf  prometheus.tf  rabbitmq.tf  speedtest.tf  storage-class-nfs.tf  terraform.tf  unifi.tf  waypoint.tf
(+5 files in other folders)
