[workspace]
resolver = "2"
members = ["src/k8s-upgrader", "binaries/spot_dynamic/backend"]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
oauth2 = "4.4.2"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.2"
